--- a/net-mqtt-typed/net-mqtt-typed.cabal
+++ b/net-mqtt-typed/net-mqtt-typed.cabal
@@ -36,6 +36,6 @@ library
   if impl(ghc >= 9)
     build-depends: singletons-th
   else
-    build-depends: singletons
+    build-depends: singletons < 2.7
   hs-source-dirs:      src
   default-language:    Haskell2010
